First workable asyncio version

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+#editors
+.vscode
+.idea/
+
+#python
 __pycache__/
 *.pyc
 dist/
 *.egg-info
 build/
-.idea/
+.eggs
+
+venv/
+
+#testing stuff
+.tox
+.coverage
