more minor fixes

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,16 @@
 [tox]
-envlist = py35
+envlist = py35,py36
 
 [testenv]
 deps =
     coverage
 commands=
     coverage run --branch --include="goprocam/*" setup.py test
+    coverage report --show-missing
+    coverage erase
+
+[flake8]
+include =
+    goprocam,
+    tests
+max-line-length = 160
